# llm_router

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pyre_configuration  Dockerfile  README.md  dev.sh  docker-compose.yml  litellm.py  pyproject.toml  test_exact.py  test_package.py
.github/: copilot-instructions.md
.github/workflows/: ci-cli.yml  ci.yml  lint.yml  pylint.yml
cli/: .gitignore  README.md  package-lock.json  package.json
cli/src/: api.js  config.js  index.jsx
cli/src/components/: Chat.jsx  Models.jsx  Providers.jsx
cli/test/: run_tests.js
docs/: api.md  conf.py
frontend/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.container.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: admin.spec.ts  api-keys.spec.ts  container-admin.spec.ts  container-api.spec.ts  container-dashboard.spec.ts  container-models.spec.ts  container-stats.spec.ts  dashboard.spec.ts  models.spec.ts  stats.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Admin/: Admin.tsx  ApiKeys.tsx  OpenAICompatible.tsx
frontend/src/components/Dashboard/: Dashboard.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/components/Models/: Models.tsx
frontend/src/components/Stats/: Stats.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/test-results/: .last-run.json
llm_router/: __init__.py
plans/: cli-test-plan.md
scripts/: inspect_models.py  manage_port.py
src/llm_router/: __init__.py  admin.py  cache.py  config.py  discovery.py  models.py  quota.py  router.py  server.py
tests/: comprehensive_test.py  integration_test.py  test_discovery_remove_model.py  test_endpoints.py  test_integration_model_normalization.py  test_litellm_call_compat.py  test_rate_limiting.py  test_router.py  test_sse_output.py
