[project]
name = "llm_router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "remixonwin", email = "remixonwin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.2.0",
    "anyio>=4.3.0",
    "cachetools>=5.3.0",
    "diskcache>=5.6.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "limits>=3.12.0",
    "litellm>=1.35.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "uvicorn[standard]>=0.29.0",
    "xxhash>=3.4.0",
]

[project.scripts]
llm-router = "llm_router.server:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
