[project]
name = "routeme"
version = "0.1.2"
description = "Intelligent LLM Router - Route requests across multiple LLM providers with automatic failover, quota management, and caching"
readme = "README.md"
authors = [
    { name = "remixonwin", email = "remixonwin@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=23.2.0",
    "anyio>=4.3.0",
    "cachetools>=5.3.0",
    "diskcache>=5.6.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "limits>=3.12.0",
    "litellm>=1.35.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "redis>=4.6.0",
    "slowapi>=0.1.9",
    "starlette>=0.40.0",
    "tenacity>=8.3.0",
    "uvicorn[standard]>=0.29.0",
    "xxhash>=3.4.0",
]

keywords = [
    "llm",
    "router",
    "load-balancing",
    "failover",
    "litellm",
    "openai",
    "anthropic",
    "gemini",
    "mistral",
    "groq",
    "embedding",
    "caching",
    "intelligent-routing",
    "ai",
    "llm-proxy",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: Proxy Servers",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]
server = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.scripts]
routeme = "llm_router.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex (may be needed for router logic)
]

[tool.ruff.lint.isort]
known-first-party = ["llm_router"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = "llm_router.*"
strict = false

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anyio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
